force-app/main/default/objects/WorkOrderLineItem/fields/Action_realisee__c.field-meta.xml
<CustomField>
    <fullName>Action_realisee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Action réalisée</label>
    <type>Checkbox</type>
</CustomField>