force-app/main/default/objects/WorkOrderLineItem/fields/Date_de_debut__c.field-meta.xml
<CustomField>
    <fullName>Date_de_debut__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de début</label>
    <type>DateTime</type>
</CustomField>