force-app/main/default/objects/WorkOrderLineItem/fields/equipement__c.field-meta.xml
<CustomField>
    <fullName>equipement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Équipement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Foyer__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions1</relationshipName>
    <type>Lookup</type>
</CustomField>