force-app/main/default/objects/WorkOrderLineItem/fields/Equipement_du_foyer__c.field-meta.xml
<CustomField>
    <fullName>Equipement_du_foyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipement du foyer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>L&apos;équipement du foyer choisi doit appartenir au foyer de l&apos;action</errorMessage>
        <filterItems>
            <field>Equipements_du_foyer__c.Type__c</field>
            <operation>equals</operation>
            <value>Poste TV</value>
        </filterItems>
        <filterItems>
            <field>Equipements_du_foyer__c.Foyer__c</field>
            <operation>equals</operation>
            <valueField>$Source.Foyer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Equipements_du_foyer__c</referenceTo>
    <relationshipLabel>Éléments d&apos;ordre d&apos;exécution</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>