force-app/main/default/objects/WorkOrderLineItem/fields/Foyer__c.field-meta.xml
<CustomField>
    <fullName>Foyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Foyer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions1</relationshipName>
    <type>Lookup</type>
</CustomField>