force-app/main/default/objects/WorkOrderLineItem/fields/Foyer_Paneliste__c.field-meta.xml
<CustomField>
    <fullName>Foyer_Paneliste__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Foyer Panéliste</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Le foyer panéliste n&apos;est pas un des foyers panéliste du foyer</errorMessage>
        <filterItems>
            <field>Foyer_paneliste__c.Foyer__c</field>
            <operation>equals</operation>
            <valueField>$Source.Foyer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Foyer_paneliste__c</referenceTo>
    <relationshipLabel>Actions</relationshipLabel>
    <relationshipName>Actions</relationshipName>
    <type>Lookup</type>
</CustomField>