force-app/main/default/objects/WorkOrderLineItem/fields/Tv_murale__c.field-meta.xml
<CustomField>
    <fullName>Tv_murale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tv murale</label>
    <type>Checkbox</type>
</CustomField>