force-app/main/default/objects/WorkOrderLineItem/fields/Type_d_action_realisee__c.field-meta.xml
<CustomField>
    <fullName>Type_d_action_realisee__c</fullName>
    <label>Type d&apos;action réalisée</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audimètre</fullName>
            </value>
            <value>
                <fullName>Alimentation Routeur</fullName>
            </value>
            <value>
                <fullName>Alimentation Audimetre</fullName>
            </value>
            <value>
                <fullName>Routeur</fullName>
            </value>
            <value>
                <fullName>Intercepteur</fullName>
            </value>
            <value>
                <fullName>CPL</fullName>
            </value>
            <value>
                <fullName>Répéteur Wifi</fullName>
            </value>
            <value>
                <fullName>Extendeur CPL/Wifi</fullName>
            </value>
            <value>
                <fullName>Câbles</fullName>
            </value>
            <value>
                <fullName>Dydac</fullName>
            </value>
            <value>
                <fullName>Télécommande</fullName>
            </value>
            <value>
                <fullName>Hub Ethernet</fullName>
            </value>
            <value>
                <fullName>Capteur Audio</fullName>
            </value>
            <value>
                <fullName>Meters</fullName>
            </value>
            <value>
                <fullName>Sonde Tv</fullName>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Installation impossible</fullName>
            </value>
            <value>
                <fullName>Poste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>