force-app/main/default/objects/WorkOrderLineItem/fields/Type_de_duree__c.field-meta.xml
<CustomField>
    <fullName>Type_de_duree__c</fullName>
    <label>Type de durée</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heures</fullName>
            </value>
            <value>
                <fullName>Minutes</fullName>
                <default>true</default>
                <label>Minutes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>