force-app/main/default/objects/WorkOrderLineItem/validationRules/RV02_au_moins_un_poste.validationRule-meta.xml
<ValidationRule>
    <fullName>RV02_au_moins_un_poste</fullName>
    <active>true</active>
    <description>Règle qui oblige à choisir au moins un équipement pour une intervention dépannage/support différentes de Ajout de Poste</description>
    <errorConditionFormula>AND(
$Profile.Name !=&apos;Ambassadeur&apos;,
$Profile.Name!=&apos;Techs externes&apos;,
!$User.Bypass_validation_rules__c,
!$User.Bypass_RDD__c,
ISBLANK(Equipement_du_foyer__c),
TEXT(WorkOrder.Type_de_l_intervention__c) = $Label.WOR_Type_d_intervention_Depannage_support,
!(TEXT(Actions__c) = $Label.WOR_Sous_type_d_intervention_Suppression_d_un_poste),
!(TEXT(Actions__c) = $Label.WOR_Sous_type_d_intervention_Ajout_equipement)
)</errorConditionFormula>
    <errorDisplayField>Equipement_du_foyer__c</errorDisplayField>
    <errorMessage>Règle qui oblige à choisir au moins un équipement pour une intervention dépannage/support différentes de Ajout  ou Suppression de Poste</errorMessage>
</ValidationRule>